[package]
name = "csv-transformer"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.19"
csv = "1.1.3"
itertools = "0.9.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
structopt = "0.3.18"
